Mobile: Prevent horizontal scrolling in notebooks
On small screens, the page was scrolling horizontally because the cell
actions were too wide and the hidden tooltips extended beyond the page.
This commit reduces the spacing between icons on smaller screens and
hides the tooltips since they're not accessible through mobile touch
anyways.

This commit partly addresses #2011.

--- a/assets/css/tooltips.css
+++ b/assets/css/tooltips.css
@@ -31,7 +31,7 @@ Example usage:
   content: attr(data-tooltip);
   white-space: pre;
   text-align: center;
-  display: block;
+  display: none;
   z-index: 100;
   background-color: #1c273c;
   color: #f0f5f9;
@@ -45,11 +45,17 @@ Example usage:
   transition-delay: 0s;
 }
 
+@media screen(md) {
+  .tooltip:before {
+    display: block;
+  }
+}
+
 /* Tooltip arrow */
 .tooltip:after {
   content: "";
   position: absolute;
-  display: block;
+  display: none;
   z-index: 100;
   /* For the arrow we use the triangle trick: https://css-tricks.com/snippets/css/css-triangle/ */
   border-width: var(--arrow-size);
@@ -59,6 +65,12 @@ Example usage:
   transition-property: visibility;
   transition-duration: 0s;
   transition-delay: 0s;
+}
+
+@media screen(md) {
+  .tooltip:after {
+    display: block;
+  }
 }
 
 .tooltip:hover:before {
